# agentic-framework-acp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: advanced-features.md  agents.md  backends-and-serving.md  examples-and-cookbook.md  getting-started.md  skills.md  tools.md
examples/agent_to_agent/: agent.py
examples/function_tools/: agent.py
examples/guardrails/: agent.py
examples/multi_turn/: agent.py
examples/router_agent/: agent.py
examples/sequential_pipeline/: agent.py
examples/simple_agent/: agent.py
examples/streaming/: agent.py
examples/tool_agent/: agent.py
src/acp_agent_framework/: __init__.py  cli.py  context.py  events.py  guardrails.py  observability.py  persistence.py  state.py
src/acp_agent_framework/agents/: __init__.py  agent.py  base.py  router.py  sequential.py  tool_agent.py
src/acp_agent_framework/backends/: __init__.py  acp_backend.py  registry.py
src/acp_agent_framework/server/: __init__.py  acp_server.py  http_server.py  serve.py
src/acp_agent_framework/server/static/: index.html
src/acp_agent_framework/skills/: __init__.py  loader.py  skill.py
src/acp_agent_framework/tools/: __init__.py  agent_tool.py  base.py  function_tool.py  mcp_bridge.py  mcp_tool_server.py
tests/: test_acp_backend.py  test_acp_server.py  test_agent_run.py  test_agent_tool.py  test_agents.py  test_backend_lifecycle.py  test_backend_registry.py  test_cli.py  test_context.py  test_events.py  test_examples.py  test_guardrails.py  test_http_server.py  test_mcp_bridge.py  test_observability.py  test_persistence.py  test_router.py  test_sequential.py  test_serve.py  test_skill_cli.py  test_skills.py  test_state.py  test_tool_agent.py  test_tools.py  test_web_ui.py
tests/integration/: test_backends.py
